refactor(ALL): 가독성 향상